--- a/index.html
+++ b/index.html
@@ -56,12 +56,31 @@
             <div class="text-center">
                 <span id="loading-spinner" class="loading loading-spinner loading-lg w-16 m-10 hidden"></span>
             </div>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 justify-center items-center gap-6" id="phone-container">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 justify-center items-center gap-6"
+                id="phone-container">
             </div>
             <div class="m-5 text-center">
-                <button id="show-all-btn" onclick="showAll()" class="btn bg-[#0D6EFD] text-white hidden">Show All</button>
+                <button id="show-all-btn" onclick="showAll()" class="btn bg-[#0D6EFD] text-white hidden">Show
+                    All</button>
             </div>
         </section>
+        <!-- phone details -->
+        <div>
+            <!-- Open the modal using ID.showModal() method -->
+            <dialog id="show_details_modal" class="modal modal-bottom sm:modal-middle">
+                <div class="modal-box">
+                    <div class="space-y-5" id="phone-details-container">
+
+                    </div>
+                    <div class="modal-action">
+                        <form method="dialog">
+                            <!-- if there is a button in form, it will close the modal -->
+                            <button class="btn">Close</button>
+                        </form>
+                    </div>
+                </div>
+            </dialog>
+        </div>
     </main>
     <footer>
 
