--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
         </nav>
         <!-- banner starts here -->
-        <div class="relative">
+        <div class="">
             <div class="hero min-h-screen bg-base-200">
                 <div class="hero-content text-center">
                     <div class="max-w-3xl">
@@ -35,11 +35,11 @@
                 </div>
             </div>
             <!-- banner images -->
-            <!-- <div class="flex justify-center items-baseline absolute top-[50%] left-[50%] translate-x-[-50%] translate-y-[10%]">
+             <div class="flex justify-center items-baseline relative top-[50%] left-[50%] translate-x-[-50%] translate-y-[-45%] w-[25%] invisible lg:visible">
                 <img src="images/phoneSmall.png" alt="">
                 <img src="images/phoneBig.png" alt="">
                 <img src="images/phoneSmall.png" alt="">
-            </div> -->
+            </div>
         </div>
     </header>
     <main class="container mx-auto">
@@ -82,9 +82,40 @@
             </dialog>
         </div>
     </main>
-    <footer>
-
-    </footer>
+    <footer class="footer p-10 bg-base-200 text-base-content">
+        <nav>
+          <h6 class="footer-title">Services</h6> 
+          <a class="link link-hover">Branding</a>
+          <a class="link link-hover">Design</a>
+          <a class="link link-hover">Marketing</a>
+          <a class="link link-hover">Advertisement</a>
+        </nav> 
+        <nav>
+          <h6 class="footer-title">Company</h6> 
+          <a class="link link-hover">About us</a>
+          <a class="link link-hover">Contact</a>
+          <a class="link link-hover">Jobs</a>
+          <a class="link link-hover">Press kit</a>
+        </nav> 
+        <nav>
+          <h6 class="footer-title">Legal</h6> 
+          <a class="link link-hover">Terms of use</a>
+          <a class="link link-hover">Privacy policy</a>
+          <a class="link link-hover">Cookie policy</a>
+        </nav> 
+        <form>
+          <h6 class="footer-title">Newsletter</h6> 
+          <fieldset class="form-control w-80">
+            <label class="label">
+              <span class="label-text">Enter your email address</span>
+            </label> 
+            <div class="join">
+              <input type="text" placeholder="username@site.com" class="input input-bordered join-item" /> 
+              <button class="btn btn-primary join-item">Subscribe</button>
+            </div>
+          </fieldset>
+        </form>
+      </footer>
     <script src="js/index.js"></script>
 </body>
 
